apps/goatlint/src/snapshots/fixtures__cli__extends_config_--config extends_rules_config.json console.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --config extends_rules_config.json console.js
working directory: fixtures/cli/extends_config
----------

  x eslint(no-console): Unexpected console statement.
   ,-[console.js:1:1]
 1 | console.log("test");
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

Found 0 warnings and 1 error.
Finished in <variable>ms on 1 file with 127 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
